depoyment/k8s/front/jeecg-front.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hzero-front
  namespace: hzero
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
  - port: 8848
    targetPort: 80
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-front
  namespace: hzero
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: hzero-front
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-front:v1.5.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: front
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1000m"
            memory: "2Gi"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hzero-front
  namespace: hzero
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: front.hzero.sendpulsar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hzero-front
            port:
              number: 8848
